0.1.8 2019-11-xx
    - Implement $node.first($xpath) and $node.last($xpath) multi-methods
0.1.7 2019-10-29
    - [LibXML::Node::List] add AT-KEY method
    - [LibXML::XPath::Context] recover queries when a result is returned;
      die otherwise. Matches behavious of Perl 5 module.
    - [LibXML::Native::Defs] changed constants to variables: XML2, BIND-XML2, CLIB
      Just to make it easier to override them if needed:
      use LibXML::Native::Defs :$XML2; $XML2 = "/someother-path/file.so"
0.1.6 2019-10-21
    - Replace class LibXML::ErrorHandler with role LibXML::ErrorHandling. Fixes #24.
    - [LibXML::DocumentFragment]. Add subclass ParserContext. Use it to
      bundle various parameters. Tidier and hopefully fixes some memory
      leaks from closures in native callbacks
0.1.5 2019-10-18
    - Added $node.findnodes :deref option. Use it in the call from
      the .AT-KEY() method. This changes:
          '$node<species><species/humps>' to a more natural:
          '$node<species><humps>'
0.1.4 2019-10-14
    - [src/dom.c] return HTML xpath keys as lowercase; make them case-insensitive.
0.1.3 2019-10-13
    - [LibXML::Node][LibXML::Node::Set][LibXML::Node::List]
      -- add .xpath-key() method; returns a key that can be used to
        refetch the node in an xpath expression. e.g.
        'comment-node()' for comment nodes.
      -- use .xpath-key() to compute Hash keys. This leads to a
         more natural round-trip, but does change some fixed keys.
         E.g. $elem<#text> is now $elem<text()>
    
0.1.2 2019-10-12
    - [LibXML::DocumentFragment] make .parse() method consistant with LibXML::Document
      -- allow .parse() as a class-level method.
      -- return the document fragment (not an integer status)
      -- rename :repair option to :recover
    - [LibXML::Node::Set][LibXML::Node::List] modify .Str() method to return a
      concatonation of nodes. This can be reparsed as a document fragment