@@ -218,10 +218,12 @@ LibXML::Element - LibXML Class for Element Nodes
   my LibXML::Node @nodes = $node.getChildrenByTagName($tagname);
   @nodes = $node.getChildrenByTagNameNS($nsURI,$tagname);
   @nodes = $node.getChildrenByLocalName($localname);
-  @nodes = $node.getElementsByTagName($tagname);
-  @nodes = $node{$xpath-expression}; # xpath node selection
-  @nodes = $node.getElementsByTagNameNS($nsURI,$localname);
-  @nodes = $node.getElementsByLocalName($localname);
+  @nodes = $node.children; # all child nodes
+  @nodes = $node.children(:!blank); # non-blank child nodes
+  my LibXML::Element @elems = $node.getElementsByTagName($tagname);
+  @elems = $node.getElementsByTagNameNS($nsURI,$localname);
+  @elems = $node.getElementsByLocalName($localname);
+  @elems = $node.elements; # all child elements
 
   #-- DOM Manipulation -- #
   $node.appendWellBalancedChunk( $chunk );
@@ -233,8 +235,9 @@ LibXML::Element - LibXML Class for Element Nodes
   $node.setNamespaceDeclPrefix( $oldPrefix, $newPrefix );
 
   # -- Associative/XPath interface -- #
-  my LibXML::Node @as = $elem<a>;  # equivalent to: $elem.findnodes<a>;
-  my $b-value  = $elem<@b>.Str;    # value of 'b' attribute
+  @nodes = $node{$xpath-expression}; # xpath node selection
+  my LibXML::Node @as = $elem<a>;    # equivalent to: $elem.findnodes<a>;
+  my $b-value  = $elem<@b>.Str;      # value of 'b' attribute
   my LibXML::Node @z-grand-kids = $elem<*/z>;   # equiv: $elem.findnodes<*/z>;
   my $text-content = $elem<text()>;
   say $_ for $elem.keys;   # @att-1 .. @att-n .. tag-1 .. tag-n
@@ -498,6 +501,13 @@ matching the given local-name. This allows one to select tags with the same
 local name across namespace borders.
 
 In SCALAR context this function returns an L<<<<<< LibXML::NodeList >>>>>> object.
+
+=end item1
+
+=begin item1
+elements
+
+An alias for `.getElementsByLocalName('*')`
 
 =end item1
 
