@@ -1,5 +1,8 @@
 0.1.8 2019-11-xx
-    - Implement $node.first($xpath) and $node.last($xpath) multi-methods
+    - [LibXML::Node][LibXML::XPath::Context] More methods and options:
+      -- $node.first($xpath) and $node.last($xpath) multi-methods
+      -- $node.elements() and .text() methods
+      -- $.children(:!blank) option
 0.1.7 2019-10-29
     - [LibXML::Node::List] add AT-KEY method
     - [LibXML::XPath::Context] recover queries when a result is returned;
